--- a/views/truckList.pug
+++ b/views/truckList.pug
@@ -10,38 +10,43 @@ block content
                         input.form-control.formsinput(name='servicerequest' placeholder="Enter your search term(Service Request) ...")
                     div.col-md-2
                         input.btn.btn-block.btn-success.formsinput(type="submit" value="Search")
-    table.table.table-striped
-        thead 
-            tr
-                th Reg. No. 
-                th Code No.
-                th Service Type
-                th Conductors No.
-                th Timestamp
-        tbody
-            if orders.length
-            each order in orders
-                tr
-                    td #{order.lastname +' '+ order.firstname}
-                    td #{order.phone}
-                    td #{order.servicerequest}
-                    td #{order.requesttype}
-                    td #{order.date}
-                    td
-                        a(href='/truck/update/'+order._id)
-                            button.btn.btn-dark
-                                i.bi.bi-pencil-square
-                    td
-                        form(method="post" action='/truck/delete')
-                            input(type="hidden", placeholder="", name="id", value=order._id)
-                            button.btn.btn-dark(type="submit") 
-                                i.bi.bi-x-square
-    div.form-row
-        div.col.form-group
-            a(href='/truck/createtruck')
-                button.btn.btn-dark(style="margin-left: 50%;")
-                    h1
-                        i.bi.bi-plus-circle-fill  Add New Truck
-                        
+    div.card.text-white.bg-dark.mb-3
+        div.card-body
+            table.table.table-striped
+                thead 
+                    tr
+                        th Reg. No. 
+                        th Code No.
+                        th Service Type
+                        th Conductors No.
+                        th Timestamp
+                tbody
+                    if trucks.length
+                    each truck in trucks
+                        tr
+                            td #{truck.regno}
+                            td #{truck.codeno}
+                            td #{truck.servicetype}
+                            td
+                            td 
+                            td
+                                a(href='/truck/update/'+truck._id)
+                                    button.btn.btn-dark
+                                        i.bi.bi-pencil-square
+                            td
+                                form(method="post" action='/truck/delete')
+                                    input(type="hidden", placeholder="", name="id", value=truck._id)
+                                    button.btn.btn-dark(type="submit") 
+                                        i.bi.bi-x-square
+            div.form-row
+                div.col.form-group
+                    a
+                        button.btn.btn-dark(style="margin-left: 72%;")
+                            h2
+                                span 
+                                    i.bi.bi-plus-circle-fill(style="color:white;")
+                                span 
+                                    a(href='/truck/createtruck' style="color:white;") Add New Truck
+                                
 
 
