--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html
             .collapse.navbar-collapse(id='navbarSupportedContent')
                 ul.navbar-nav.mr-auto
                     li.nav-item.active
-                        a.nav-link(href='#') Home
+                        a.nav-link(href='/homepage') Home
                     li.nav-item
                         a.nav-link(href='/employee/employeelist') Employees
                     li.nav-item
@@ -30,8 +30,11 @@ html
                     li.nav-item
                         a.nav-link(href='/orders') Financials
                 form.form-inline.my-2.my-lg-0(method="post" action='/logout')
-                    button.btn.btn-outline-success.my-2.my-sm-0.formsinput(type="Submit")
-                        i.bi.bi-person-circle   Log Out
+                    button.btn.btn-outline-success.btn-lgformsinput(type="Submit")
+                        span 
+                            a LogOut  
+                        span
+                            i.bi.bi-arrow-bar-right
         
                 
     body
